// file: proto/gcommon/v1/database/clear_request.proto
// version: 1.0.0
// guid: de4fghij-56k7-8l9m-0n1o-2p3q4r5s6t7u

edition = "2023";

package database.v1;

import "common/v1/request_metadata.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/database/";

/**
 * Request to clear all cache entries.
 * Optionally clear only a specific namespace.
 */
message ClearRequest {
  // Optional namespace to clear (if empty, clears all)
  string namespace = 1 [(buf.validate.field).string.min_len = 1];

  // Request metadata for tracing
  common.v1.RequestMetadata metadata = 2;
}
