// file: proto/gcommon/v1/database/keys_response.proto
// version: 1.0.0
// guid: fg6hijkl-78m9-0n1o-2p3q-4r5s6t7u8v9w

edition = "2023";

package database.v1;

import "common/v1/error.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/database/";

/**
 * Response for cache keys listing operations.
 * Returns all matching keys from the cache.
 */
message KeysResponse {
  // List of keys matching the pattern
  repeated string keys = 1 [(buf.validate.field).repeated.min_items = 1];

  // Total number of keys found
  int64 total_count = 2 [(buf.validate.field).int64.gte = 0];

  // Whether the operation was successful
  bool success = 3;

  // Error details if keys retrieval failed
  common.v1.Error error = 4;
}
