// file: proto/gcommon/v2/database/exists_response.proto
// version: 1.0.1
// guid: ab1cdef2-23a4-5b6c-7d8e-9f0a1b2c3d4e

edition = "2023";

package database.v2;

import "common/v2/error.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/database/v2";

/**
 * Response for cache key existence checks.
 * Indicates whether a key exists in the cache.
 */
message ExistsResponse {
  // Whether the key exists in the cache
  bool exists = 1;

  // Error details if check failed
  common.v2.Error error = 2;
}
