// file: pkg/cache/proto/requests/exists_request.proto
edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/jdfalk/gcommon/pkg/cache/proto;cachepb";
option features.(pb.go).api_level = API_OPAQUE;

/**
 * Request to check for the existence of a cache key.
 */
message ExistsRequest {
  // Cache key to check
  string key = 1;

  // Optional namespace
  string namespace = 2;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 3 [lazy = true];
}
