// file: pkg/cache/proto/requests/increment_request.proto
edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/duration.proto";
import "google/protobuf/go_features.proto";
import "pkg/common/proto/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/cache/proto";

/**
 * Request to increment a cached counter atomically.
 */
message IncrementRequest {
  // Counter key
  string key = 1;

  // Increment delta (can be negative)
  int64 delta = 2;

  // Initial value if key doesn't exist
  int64 initial_value = 3;

  // TTL for the counter
  google.protobuf.Duration ttl = 4 [lazy = true];

  // Optional namespace
  string namespace = 5;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 6 [lazy = true];
}
