// file: pkg/cache/proto/requests/keys_request.proto
edition = "2023";

package gcommon.v1.cache;

import "pkg/common/proto/pagination.proto";
import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/cache/proto";

/**
 * Request to list cache keys matching a pattern.
 */
message KeysRequest {
  // Key pattern to match (supports wildcards)
  string pattern = 1;

  // Optional namespace
  string namespace = 2;

  // Pagination options
  gcommon.v1.common.Pagination pagination = 3 [lazy = true];

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 4 [lazy = true];
}
