// file: pkg/cache/proto/requests/delete_multiple_request.proto
edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/request_metadata.proto";

option go_package = "../../../../pkg/cache/pb;cachepb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * Request to delete multiple cache keys.
 */
message DeleteMultipleRequest {
  // Keys to delete
  repeated string keys = 1;

  // Optional namespace
  string namespace = 2;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 3 [lazy = true];
}
