// file: pkg/cache/proto/responses/delete_multiple_response.proto
// version: 1.0.0
// guid: ab1cdefg-23h4-5i6j-7k8l-9m0n1o2p3q4r

edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/error.proto";

option go_package = "../../../../pkg/cache/proto;cachepb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * Response for cache delete multiple operations.
 * Indicates success/failure of multiple key deletions.
 */
message DeleteMultipleResponse {
  // Number of keys that were successfully deleted
  int32 deleted_count = 1;

  // Number of keys that failed to delete
  int32 failed_count = 2;

  // List of keys that failed to delete
  repeated string failed_keys = 3;

  // Error details if any deletions failed
  gcommon.v1.common.Error error = 4;
}
