// file: pkg/cache/proto/responses/set_multiple_response.proto
// version: 1.0.0
// guid: ef5g6789-789a-0b1c-2d3e-4f5a6b7c8d9e

edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/error.proto";

option go_package = "../../../../pb;cachepb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * Response for multiple cache value set operations.
 * Indicates success/failure of batch set operation.
 */
message SetMultipleResponse {
  // Whether all values were successfully set
  bool success = 1;

  // List of keys that failed to be set
  repeated string failed_keys = 2;

  // Error details if operation failed
  gcommon.v1.common.Error error = 3;

  // Number of keys that were successfully set
  int32 set_count = 4;
}
