// file: cache/proto/responses/set_response.proto
edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * Response for cache set operation.
 * Indicates success and provides operation metadata.
 */
message SetResponse {
  // Whether the operation was successful
  bool success = 1;

  // Whether an existing value was overwritten
  bool overwritten = 2;

  // Size of the stored value in bytes
  int64 size_bytes = 3;
}
