// file: pkg/cache/proto/requests/ttl_request.proto
edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/duration.proto";
import "google/protobuf/go_features.proto";
import "pkg/common/proto/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/cache/proto";

/**
 * Request to update the TTL of an existing cache key.
 */
message TouchExpirationRequest {
  // Key to update
  string key = 1;

  // New TTL duration
  google.protobuf.Duration ttl = 2 [lazy = true];

  // Optional namespace
  string namespace = 3;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 4 [lazy = true];
}
