// file: pkg/cache/proto/responses/touch_expiration_response.proto
// version: 1.0.0
// guid: kl1mnopq-23r4-5s6t-7u8v-9w0x1y2z3a4b

edition = "2023";

package gcommon.v1.cache;

import "pkg/common/proto/error.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/cache/proto";

/**
 * Response for cache touch expiration operations.
 * Indicates success/failure of TTL update.
 */
message TouchExpirationResponse {
  // Whether the key's TTL was successfully updated
  bool success = 1;

  // Whether the key existed before the touch operation
  bool key_existed = 2;

  // Error details if touch failed
  gcommon.v1.common.Error error = 3;
}
