// file: pkg/common/proto/messages/response_metadata.proto
// version: 1.0.0
// guid: 5a7c8e9f-4b6d-2a1c-9e8d-7c6b5a4e3d2c

// ResponseMetadata message definition for standardized response metadata
//
// This file implements the 1-1-1 pattern: one message per file.
// It defines the standard metadata included in all service responses.

edition = "2023";

package gcommon.v1.common;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "pkg/common/proto/messages/error.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/common/proto;commonpb";
option features.(pb.go).api_level = API_HYBRID;

// ResponseMetadata provides standardized metadata for all service responses
//
// This message contains common fields that should be included in response
// messages for observability, tracing, and error handling.
message ResponseMetadata {
  // Trace ID from the corresponding request for correlation
  string trace_id = 1;

  // Request ID for unique identification of this specific request
  string request_id = 2;

  // Timestamp when the response was generated
  google.protobuf.Timestamp timestamp = 3;

  // Total processing time for the request
  google.protobuf.Duration processing_time = 4;

  // Service version that processed the request
  string service_version = 5;

  // Success indicator (true if operation succeeded)
  bool success = 6;

  // Error information if the operation failed
  Error error = 7;

  // Additional metadata specific to the response
  map<string, string> metadata = 8;

  // Rate limiting information
  RateLimitInfo rate_limit = 9;

  // Pagination information for list responses
  PaginationInfo pagination = 10;
}

// Rate limiting information in response metadata
message RateLimitInfo {
  // Number of requests remaining in the current window
  int64 remaining = 1;

  // Total requests allowed in the current window
  int64 limit = 2;

  // Time when the current rate limit window resets
  google.protobuf.Timestamp reset_time = 3;

  // Duration until the rate limit resets
  google.protobuf.Duration retry_after = 4;
}

// Pagination information for list responses
message PaginationInfo {
  // Current page number (1-based)
  int32 current_page = 1;

  // Number of items per page
  int32 page_size = 2;

  // Total number of items available
  int64 total_items = 3;

  // Total number of pages available
  int32 total_pages = 4;

  // Whether there is a next page
  bool has_next = 5;

  // Whether there is a previous page
  bool has_previous = 6;

  // Token for retrieving the next page
  string next_page_token = 7;

  // Token for retrieving the previous page
  string previous_page_token = 8;
}
