// file: proto/gcommon/v1/database/config/flush_request.proto
edition = "2023";

package gcommon.v1.database.config;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/api/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package gcommon.v1.database.config;

/**
 * Request to flush the cache to persistent storage.
 */
message FlushRequest {
  // Optional namespace to flush
  string namespace = 1;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
