// file: proto/gcommon/v1/database/messages/increment_response.proto
// version: 1.0.0
// guid: bc2defgh-34i5-6j7k-8l9m-0n1o2p3q4r5s

edition = "2023";

package gcommon.v1.database;

import "gcommon/v1/common/messages/error.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/database";

/**
 * Response for cache increment operations.
 * Returns the new value after incrementing.
 */
message IncrementResponse {
  // The new value after incrementing
  int64 new_value = 1;

  // Whether the operation was successful
  bool success = 2;

  // Error details if increment failed
  gcommon.v1.common.Error error = 3;
}
