// file: proto/gcommon/v1/database/messages/set_multiple_request.proto
// version: 1.0.0
// guid: de4f5678-678a-9b0c-1d2e-3f4a5b6c7d8e

edition = "2023";

package gcommon.v1.database;

import "gcommon/v1/common/messages/request_metadata.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/database";

/**
 * Request to set multiple cache key-value pairs.
 * Supports batch operations for performance optimization.
 */
message SetMultipleRequest {
  // Map of key-value pairs to set
  map<string, bytes> values = 1;

  // TTL for the cache entries (optional)
  google.protobuf.Duration ttl = 2 [lazy = true];

  // Request metadata for tracing
  gcommon.v1.common.RequestMetadata metadata = 3 [lazy = true];
}
